# cumulo

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/actions/setup-cargo/: action.yml
.github/actions/versions/: action.yml
.github/workflows/: main.yml  pullrequest.yml  release.yml
cumulo-e2e/: Cargo.toml  README.md
cumulo-e2e/src/: chrome.rs  lib.rs  session.rs  site.rs
cumulo-e2e/tests/: category.rs  crud.rs  deeplink.rs  dnd.rs  facet.rs  filter.rs  map.rs  matrix.rs  navigation.rs  persistence.rs  smoke.rs
cumulo-extension/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html
cumulo-extension/public/: background.js  bootstrap.js  manifest.json  popup.html
cumulo-extension/src/: clip.rs  lib.rs  main.rs  mode.rs  popup.rs
cumulo-model/: Cargo.toml
cumulo-model/src/: attribute.rs  bipartite.rs  category.rs  entity.rs  error.rs  filters.rs  forest.rs  id.rs  io.rs  lib.rs  model.rs  query.rs  resource.rs
cumulo-model/src/demo/: cloud.json  mod.rs
cumulo-web/: Cargo.toml  Trunk.toml  build.rs  index.html
cumulo-web/locales/: en.json  ja.json
cumulo-web/public/: 404.html  map.js  styles.css
cumulo-web/src/: app.rs  client.rs  lib.rs  locale.rs  main.rs  map_bridge.rs  model.rs  platform.rs  query.rs  state.rs  storage.rs
cumulo-web/src/category/: attribute.rs  attributes_tab.rs  mod.rs
cumulo-web/src/components/: app.rs  attributes_tab.rs  controls.rs  detail_panel.rs  dimensions_tab.rs  entities_tab.rs  entity_form.rs  facet_sidebar.rs  facet_view.rs  map_canvas.rs  mod.rs  palette.rs  resource_form.rs  resources_tab.rs  settings_modal.rs
cumulo-web/src/config/: default.json
cumulo-web/src/logic/: facet.rs
cumulo-web/src/map/: force.rs  layout.rs  mod.rs  zoom.rs
cumulo-web/src/query/: de.rs  error.rs  mod.rs  ser.rs
cumulo-web/src/resource/: attribute.rs  card.rs  detail_panel.rs  entities_tab.rs  form.rs  mod.rs
cumulo-web/src/shared/: color.rs  confirm.rs  mod.rs  palette.rs  settings_modal.rs  toast.rs
cumulo-web/src/views/: mod.rs
cumulo-web/src/views/facet/: mod.rs  page.rs  sidebar.rs
cumulo-web/src/views/map/: canvas.rs  controls.rs  force.rs  layout.rs  lod.rs  mod.rs  page.rs  zoom.rs
cumulo-web/src/views/matrix/: axis_facet.rs  mod.rs  page.rs
docs/: README.md  domain.md
public/: cube.js  map.js  style.css  styles.css
skills/build-cumulo-data/: SKILL.md
src/: cube_bridge.rs  io.rs  lib.rs  main.rs  map_bridge.rs  model.rs  storage.rs  web.rs
src/components/: app.rs  controls.rs  cube_nav.rs  detail_panel.rs  dimensions_tab.rs  facet_panel.rs  facet_sidebar.rs  facet_view.rs  map_canvas.rs  mod.rs  palette.rs  resource_card.rs  resource_form.rs  resources_tab.rs  result_panel.rs  settings_modal.rs  slice_grid.rs
src/config/: default.json  dimensions.json  map_config.json  resources.json
src/logic/: cluster.rs  facet.rs  mod.rs
