[package]
name = "cumulo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cumulo"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Storage",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "Element",
  "console",
] }
js-sys = "0.3"
gloo-storage = "0.3"
gloo-utils = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
