[workspace]
members = ["cumulo-model", "cumulo-web", "cumulo-extension"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hayas1 <h4ystack@gmail.com>"]
repository = "https://github.com/hayas1/cumulo"
license-file = "LICENSE"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
