[package]
name = "cumulo-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# 全画面アプリ本体は cumulo-web を再利用。start を二重に載せないよう embed で本体のエントリを落とす。
cumulo-web = { path = "../cumulo-web", features = ["embed"] }
# popup（Web クリッパー）は chrome.tabs 依存の拡張固有 UI なのでこの crate 側に持つ。
cumulo-model = { path = "../cumulo-model" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
console_error_panic_hook = "0.1"

[build-dependencies]
# favicon.svg を唯一のソースに、拡張一覧/ツールバー用の PNG（SVG 不可）を build 時に生成する。
# resvg は usvg(SVG 解析) と tiny_skia(ラスタライズ) を同梱する。
resvg = "0.45"
