[package]
name = "cumulo-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
cumulo-web = { path = "../cumulo-web" }
cumulo-model = { path = "../cumulo-model" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
console_error_panic_hook = "0.1"

[build-dependencies]
resvg = "0.45"
