[package]
name = "cumulo-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
cumulo-model = { path = "../cumulo-model", features = ["demo"] }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptos_icons = "0.7"
icondata = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Location",
    "Blob", "BlobPropertyBag", "Url",
    "HtmlAnchorElement", "Document", "Element", "HtmlElement", "Node",
    "HtmlInputElement", "FileList", "File",
    "DragEvent", "DataTransfer", "DomRect",
    "MouseEvent", "WheelEvent", "PointerEvent", "SubmitEvent",
] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
leptos_router = { version = "0.8", features = ["ssr"] }
